--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "contentful-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vrw-gh.github.io/Contentful-with-backend/",
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^15.8.0",
     "@testing-library/jest-dom": "^5.15.0",
@@ -19,10 +20,9 @@
     "web-vitals": "^1.1.2",
     "webpack": "4.46.0"
   },
-  "homepage": "https://vrw-gh.github.io/Contentful-with-backend/",
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start ",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
