--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2",
-    "webpack": "4.46.0"
+    "webpack": "^4.44.2"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start ",
